@@ -1,6 +1,6 @@
 <?php
 $version = '0.9.5 beta 3';	// Current version.
-$code_name = 'rev 1429';	// SVN version number
+$code_name = 'rev 1430';	// SVN version number
 $full_appname = 'MODx'.' '.$version.($code_name ? " ($code_name)":"");
 $small_version = '0';
 $patch_level = '0';
